--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format && npm run lint"
+    }
+  },
   "dependencies": {
     "antd": "^4.16.0",
     "react": "^17.0.2",
@@ -22,10 +27,11 @@
     "@types/chai": "^4.2.17",
     "@types/mocha": "^8.2.2",
     "@types/react": "^17.0.4",
-    "@types/snowpack-env": "^2.3.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/snowpack-env": "^2.3.3",
     "@web/test-runner": "^0.13.3",
     "chai": "^4.3.4",
+    "husky": "^6.0.0",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
